--- a/css/style.css
+++ b/css/style.css
@@ -103,35 +103,28 @@ h1,h2,h4,h5,h6 {
 				height: 350px;
 				list-style: none;
 				float: left;
-			}
-				#issues li.selected img {
-					-webkit-transform: scale(1.1,1.1);
-					-moz-transform: scale(1.1,1.1);
-				    -o-transform: scale(1.1,1.1);
-				    -ms-transform: scale(1.1,1.1);
-				    transform: scale(1.1,1.1);
+			}	
+				#issues li.selected img.imagen_galeria,#issues li.selected img.miniatura{
+				    transform: scale(1,1);
 				}
-				#issues li img {
+				
+				#issues li img.imagen_galeria {
 					float: left;
-					margin: 10px 30px 10px 50px;
-					background: transparent;
-					-ms-filter: "progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF)"; /* IE 8 */   
-					filter: progid:DXImageTransform.Microsoft.gradient(startColorstr=#00FFFFFF,endColorstr=#00FFFFFF);/* IE 6 & 7 */      
-					zoom: 1;
-					-webkit-transition: all 2s ease-in-out;
-					-moz-transition: all 2s ease-in-out;
-					-o-transition: all 2s ease-in-out;
-					-ms-transition: all 2s ease-in-out; 
+					background: transparent;    
+					zoom: 1; 
+					transition: all 5s ease-in-out;
+					transform: scale(0.8,0.8);
+				}
+				#issues li img.miniatura {
+					float: left;
+					background: transparent;    
+					zoom: 1; 
 					transition: all 2s ease-in-out;
-					-webkit-transform: scale(0.7,0.7);
-					-moz-transform: scale(0.7,0.7);
-				    -o-transform: scale(0.7,0.7);
-				    -ms-transform: scale(0.7,0.7);
-				    transform: scale(0.7,0.7);
+					transform: scale(0.8,0.8);
 				}
 				#issues li h1 {
 					color: #ffcc00;
-					font-size: 48px;
+					font-size: 36px;
 					margin: 20px 0;
 					text-shadow: #000 1px 1px 2px;
 				}
@@ -146,7 +139,7 @@ h1,h2,h4,h5,h6 {
 		#grad_left,
 		#grad_right {
 			width: 100px;
-			height: 350px;
+			height: 400px;
 			position: absolute;
 			top: 0;
 		}
